@@ -100,11 +100,12 @@
 # sending mosquitto a SIGUSR1 signal.
 #autosave_interval 1800
 
-# Save persistent message data to disk (1/0).
+# Save persistent message data to disk (true/false).
 # This saves information about all messages, including 
 # subscriptions, currently in-flight messages and retained 
 # messages.
-#persistence 0
+# retained_persistence is a synonym for this option.
+#persistence false
 
 # The filename to use for the persistent database, not including 
 # the path.
@@ -243,7 +244,6 @@
 
 #autosave_on_changes
 #connection_messages
-#retained_persistence
 #addresses
 #idle_timeout
 #notifications
